--- a/egypt_property_setup.ipynb
+++ b/egypt_property_setup.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOkDqjxpJSEMvmzRqI+Rq59",
+      "authorship_tag": "ABX9TyNgDtRrAwS5i0tIlyhiMTRF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,93 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "PTCojN3eyk3d"
+        "id": "PTCojN3eyk3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7010a9de-cb89-4f47-cb95-5f4e66cbf264"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Mount Google Drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Create project folder in Drive\n",
+        "!mkdir -p \"/content/drive/MyDrive/egypt-property-ai\"\n",
+        "%cd \"/content/drive/MyDrive/egypt-property-ai\"\n",
+        "\n",
+        "import os\n",
+        "print(\"Connected to Google Drive\")\n",
+        "print(f\"Working directory: {os.getcwd()}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nOZzZNrczeKp",
+        "outputId": "c3f41c83-9d8f-41d4-d509-4df0cf55cd63"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/MyDrive/egypt-property-ai\n",
+            "Connected to Google Drive\n",
+            "Working directory: /content/drive/MyDrive/egypt-property-ai\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Install required packages\n",
+        "!pip install -q pandas scikit-learn matplotlib seaborn sqlalchemy fastapi python-dotenv\n",
+        "print(\"Packages installed successfully!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w5WTej7s0OYo",
+        "outputId": "d4020b14-aecb-4971-96e3-c0179a5ff0d7"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Packages installed successfully!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RGnxmXAx1I5N"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
