--- a/egypt_property_setup.ipynb
+++ b/egypt_property_setup.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHDF77zLNYwqS6Bqs6NKR0",
+      "authorship_tag": "ABX9TyPP7PP6NA5btfhyOlbbhGPq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,198 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/fakhreldin001/egypt-property-ai/blob/main/egypt_property_setup.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#import google drive library\n",
+        "from google.colab import drive\n",
+        "\n",
+        "#connect google drive to this notebook\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "#create project folder in drive\n",
+        "!mkdir -p \"/content/drive/My Drive/egypt-property-ai\"\n",
+        "\n",
+        "#change workingdirectory to the new folder\n",
+        "%cd \"/content/drive/My Drive/egypt-property-ai\"\n",
+        "\n",
+        "#confirmation message\n",
+        "print(\"Connected to Google Drive Successfully!\")\n",
+        "\n",
+        "#show current path\n",
+        "current_path = !pwd\n",
+        "print(\"Current Path : \" , current_path[0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cqbtVZ9nEPI4",
+        "outputId": "c35730c3-67b9-4207-ca83-ca5e4511c63f"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "/content/drive/My Drive/egypt-property-ai\n",
+            "Connected to Google Drive Successfully\n",
+            "Current Path :  /content/drive/My Drive/egypt-property-ai\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#install required libraries\n",
+        "!pip install -q pandas matplotlib seaborn supabase python-dotenv scikit-learn requests beautifulsoup4\n",
+        "print(\" All Packages Installed Successfully!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OUcTCTw-EYhT",
+        "outputId": "71713f09-2a06-40b5-90c8-8d6ac1afc722"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/48.0 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m48.0/48.0 kB\u001b[0m \u001b[31m3.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.4 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m78.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m37.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/2.1 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m75.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m42.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/123.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m123.9/123.9 kB\u001b[0m \u001b[31m7.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h All Packages Installed Successfully!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#create .env file to store sensitive data\n",
+        "%%writefile .env\n",
+        "SUPABASE_URL=https://wvoggelqantxesjxsgtj.supabase.co\n",
+        "SUPABASE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Ind2b2dnZWxxYW50eGVzanhzZ3RqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njg5NTc1MzksImV4cCI6MjA4NDUzMzUzOX0.EGFRaLvPwJMr9OwU8nZmWY4P6YSd3hMpRF1VnyG1OFw\n",
+        "ENVIRONMENT=development"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2T2ktsmrHEQ3",
+        "outputId": "ef90410b-57c2-4150-d4c4-c4b6fdfa37b1"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting .env\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#import required libraries\n",
+        "import os\n",
+        "from dotenv import load_dotenv\n",
+        "from supabase import create_client , Client\n",
+        "load_dotenv()\n",
+        "\n",
+        "#real url and key from .env file\n",
+        "SUPABASE_URL = os.getenv(\"SUPABASE_URL\")\n",
+        "SUPABASE_KEY = os.getenv(\"SUPABASE_KEY\")\n",
+        "\n",
+        "#verify if data exists\n",
+        "if not SUPABASE_URL or not SUPABASE_KEY:\n",
+        "  print(\"Error : Check your .env file\")\n",
+        "else:\n",
+        "  #connet to database\n",
+        "  supabase: Client = create_client(SUPABASE_URL, SUPABASE_KEY)\n",
+        "  print(\"Connected to Supabase Successfully!\")\n",
+        "  print(f\"Supabase URL : {SUPABASE_URL[:30]}...\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RSrQHfjcISI4",
+        "outputId": "ba43ccac-5398-47d4-9fb7-97810c1a2177"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Connected to Supabase Successfully!\n",
+            "Supabase URL : https://wvoggelqantxesjxsgtj.s...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#verify properties table exists\n",
+        "\n",
+        "#reading the data from the table\n",
+        "try:\n",
+        "  response = supabase.table('properties').select(\"*\").limit(1).execute()\n",
+        "  print(\"Properties table exists and workwing!\")\n",
+        "  # Only print the number of columns if there is data to avoid IndexError\n",
+        "  if response.data:\n",
+        "    print(f\" Number of columns: {len(response.data[0].keys())}\")\n",
+        "\n",
+        "  if len(response.data) == 0:\n",
+        "    print(\"Table is empty (its okay we havent added data yet)\")\n",
+        "  else:\n",
+        "    print(\"First row :\")\n",
+        "    print(response.data[0])\n",
+        "except Exception as e:\n",
+        "  print(f\"Error : {e}\")\n",
+        "  print(\"\\n Solution:\")\n",
+        "  print(\"make sure you made supabase dashboard in sql\")\n",
+        "  print(\"make sure url and key are in .env\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "77gGUzalJeCt",
+        "outputId": "6625cb13-7be5-4e2b-9330-1b8f58c60ff5"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Properties table exists and workwing!\n",
+            "Table is empty (its okay we havent added data yet)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "IUu-vmtEOKnP"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
